# DevOps_Oct2025_T01_Team1_Assignment

./: .dockerignore  .env.ci  .env.example  .gitignore  Makefile  README.md  buf.gen.yaml  codecov.yml  compose.ci.yml  compose.dev.yml  compose.production.yml  compose.staging.yml  compose.yml  go.work  go.work.sum  package-lock.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  container-images-releases.yml  container-images.yml  dast.yml  deploy.yml  detect-affected.yml  gitleaks.yml  integration-test.yml  unit-test.yml
apps/api-gateway/: .env.example  Dockerfile  go.mod  go.sum  project.json
apps/auth-service/: .env.example  Dockerfile  go.mod  go.sum  project.json
apps/common/: go.mod  go.sum  project.json
apps/file-service/: .env.example  Dockerfile  project.json  pyproject.toml  requirements.txt  telemetry.py
apps/file-service/auth/v1/: auth_pb2_grpc.py
apps/file-service/cmd/server/: main.py
apps/file-service/file/v1/: file_pb2.py  file_pb2_grpc.py
apps/file-service/file_service/: __init__.py  __main__.py  auth_client.py  config.py  health.py  http_server.py  service.py  store.py  telemetry.py
apps/file-service/internal/config/: config.py
apps/file-service/internal/health/: health.py
apps/file-service/internal/service/: service.py
apps/file-service/internal/store/: db.py
apps/file-service/pb/auth/v1/: auth_pb2.py
apps/file-service/tests/: test_health.py  test_main.py  test_multipart.py  test_service.py  test_store.py  test_telemetry.py
apps/file-service/user/v1/: user_pb2.py  user_pb2_grpc.py
apps/frontend/: .dockerignore  (+7 more)
(+119 files in other folders)
